<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ImageLibraryFragment"
    android:id="@+id/lib_root">

    <TextView
        android:id="@+id/libraryTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/empty_list_text"
        android:layout_marginTop="100dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ProgressBar
        android:id="@+id/libProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_overlay" />

</RelativeLayout>