<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".views.ImageEditorActivity"
    android:orientation="vertical"
    android:id="@+id/rootView"
    android:theme="@style/Theme.AppCompat.NoActionBar">

    <ImageView
        android:id="@+id/fullscreenImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="400dp"
        android:adjustViewBounds="true"/>

    <Button
        android:id="@+id/btn_saveImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="saveImageToLibrary"/>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/filterButtons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </HorizontalScrollView>
</LinearLayout>