<resources>
    <string name="app_name">Photo Magic</string>
    <string name="tab_text_1">Camera</string>
    <string name="tab_text_2">Library</string>
    <string name="tab_text_3">Search</string>
    <string name="searchPictures">Search for photos</string>
    <string name="searchButtons">Search</string>
    <string name="searchLabel">Search free high resolution photos online</string>
    <string name="searchingText">Searching…</string>

    <string name="title_activity_fullscreen_image">Edit your image</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="empty_list_text">Nothing here…</string>
    <string name="library_loading_text">Loading…</string>
    <string name="savingText">Saving…</string>
    <string name="save">Save</string>

    <string name="saveImage">Save Image to Gallery</string>
    <string name="deleteImage">Delete Image</string>
    <string name="editImage">Edit Image</string>
</resources>
